[fix]: Added style for fixing overflow of text in Site notice content

--- a/src/ui/components/Notice/styles.scss
+++ b/src/ui/components/Notice/styles.scss
@@ -63,6 +63,7 @@
   display: inline-block;
   margin: 0;
   padding: 4px 0;
+  word-break: break-word;
 
   .Notice-light & {
     padding: 0;
